# Hill90

./: .editorconfig  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  TODO.md  WORKFLOW.md  policy.hujson
.claude/: settings.json
.codex/: config.toml
.github/: pull_request_template.md
docs/: TWINGATE_ACCESS.md  assessment-github-copilot-support.md
docs-site/: docs.json  index.mdx  openapi.yaml  package-lock.json  package.json
scripts/: _common.sh  agentbox-compose-gen.py  agentbox.sh  backup.sh  bootstrap-vps.sh  build-openclaw-enhanced.sh  build-openclaw.sh  config-vps.sh  deploy-ai.sh  deploy-all.sh  deploy-api.sh  deploy-auth.sh  deploy-infra.sh  deploy-mcp.sh  deploy.sh  dns-manager.sh  generate-all-secrets.sh  health-check.sh  hostinger-api.sh  hostinger.sh  ops.sh  provision-akm-db.sh  provision-litellm-db.sh  rebuild-vps-mcp-optimized.sh  rebuild-vps-mcp.sh  recreate-vps.sh  rollback.sh  secrets-init.sh  secrets-update.sh  secrets-view.sh  secrets.sh  supervisor-tmux-loop.sh  supervisor-tmux-status.sh  tailscale-api.sh  twingate-inject-tokens.sh  update-dns-records.sh  (+11 more)
services/agentbox/: .dockerignore  Dockerfile  Dockerfile.browser  Dockerfile.monitor  pyproject.toml
services/agentbox/app/: chat.py  config.py  events.py  filesystem.py  policy.py  pty_shell.py  runtime.py  server.py  shell.py  terminal_log.py  token_refresh.py  tools.py  ws_terminal.py
services/agentbox/tests/: test_app_filesystem.py  test_app_shell.py  test_chat.py  test_config.py  test_events.py  test_fastmcp_removal.py  test_filesystem.py  test_health.py  test_identity.py  test_policy.py  test_runtime.py  test_server.py  test_server_functional.py  test_shell.py  test_tools.py  test_ws_terminal.py
services/agentbox/tests/unit/: test_pty_shell.py
services/agentbox/theme/: p10k.zsh  tmux.conf  zshrc
services/agentbox/tools/: filesystem.py  health.py  identity.py  shell.py
services/knowledge/: Dockerfile  pyproject.toml
services/knowledge/app/: config.py  main.py
services/knowledge/app/db/: migrate.py
services/knowledge/app/db/migrations/: 001_create_knowledge_entries.sql  002_create_knowledge_links.sql  003_create_revoked_tokens.sql  004_create_agent_tokens.sql  005_create_quarantine_entries.sql  006_create_shared_knowledge.sql  007_add_retrieval_duration.sql  008_add_notebook_entry_type.sql  009_create_agent_tasks.sql  010_add_retrieval_collection_id.sql  011_add_vector_embeddings.sql  012_create_agent_memories.sql
services/knowledge/app/middleware/: agent_auth.py
services/knowledge/app/routes/: context.py  entries.py  health.py  internal.py  internal_admin.py  internal_admin_shared.py  internal_admin_tasks.py  journal.py  memories.py  search.py  shared.py  tasks.py
services/knowledge/app/services/: embeddings.py  frontmatter.py  ingest.py  knowledge_store.py  memory_store.py  path_policy.py  quality.py  reconciler.py  shared_store.py  task_store.py  text_chunker.py  web_page_fetcher.py
services/knowledge/cli/: go.mod  main.go
services/knowledge/cli/client/: akm.go  akm_test.go
services/knowledge/cli/cmd/: context.go  journal.go  list.go  read.go  root.go  search.go  write.go
services/knowledge/tests/: conftest.py
services/knowledge/tests/integration/: test_context.py  test_crud.py  test_health.py  test_internal_admin.py  test_journal.py  test_reconciler.py  test_refresh.py  test_refresh_owner.py  test_search.py  test_shared_audit.py  test_shared_collections.py  test_shared_ingest.py  test_shared_quality.py  test_shared_retrieval.py  test_shared_search.py  test_shared_stats.py  test_write_pipeline.py
services/knowledge/tests/unit/: test_agent_auth.py  test_frontmatter.py  test_path_policy.py  test_quality.py  test_text_chunker.py  test_web_page_fetcher.py
src/services/agentbox/: Dockerfile  pyproject.toml
src/services/agentbox/tests/: test_health.py  test_identity.py  test_shell.py
src/services/agentbox/tools/: shell.py
src/services/ai/: Dockerfile  Dockerfile.dev  pyproject.toml
src/services/ai/app/: __init__.py  main.py
src/services/mcp/: Dockerfile  Dockerfile.dev  pyproject.toml
src/services/mcp/app/: __init__.py  main.py
src/services/mcp/app/middleware/: auth.py
src/services/mcp/tests/: test_auth.py  test_routes.py
(+860 files in other folders)
