[tool.poetry]
name = "hill90-agentbox"
version = "0.1.0"
description = "Hill90 AgentBox — sandboxed MCP server for AI agent execution"
authors = ["Hill90 Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastmcp = ">=2.0.0"
pydantic = "^2.5.0"
pyyaml = "^6.0"
requests = "^2.31.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
