[tool.poetry]
name = "hill90-mcp"
version = "0.1.0"
description = "Hill90 MCP Gateway"
authors = ["Hill90 Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
mcp = "^0.9.0"
pydantic = "^2.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.1.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
